# python-study

01-handson/: AGENTS.md  Python速習ハンズオン.md
01-handson/my-python-app/: .gitignore  cli.py  database.py  docker-compose.yml  main.py  memo.md  pyproject.toml  schemas.py  test_main.py
