[project]
name = "my-python-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.3",
    "sqlalchemy>=2.0.49",
    "typer>=0.24.1",
    "uvicorn>=0.44.0",
]

[tool.ruff]
line-length = 88 # PrettierのprintWidth相当

[tool.ruff.lint]
select = ["E", "F", "I"] # 基本的なエラーと、I(isort: import順序の自動整理)を有効化